// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Artist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            alt="./avatar.jpg"
            class="h-full w-full rounded-full svelte-hn7eai"
            height="256"
            loading="lazy"
            src="./avatar.jpg"
            width="256"
          />
           
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Foo Fighters
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          2 albums
        </h4>
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Artist No Albums 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            alt="./avatar.jpg"
            class="h-full w-full rounded-full svelte-hn7eai"
            height="256"
            loading="lazy"
            src="./avatar.jpg"
            width="256"
          />
           
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Foo Fighters
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        />
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Artist Unknown 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            class="h-full w-full rounded-full hidden svelte-hn7eai"
            height="256"
            loading="lazy"
            width="256"
          />
           
          <span
            class="h-full w-full svelte-hn7eai rounded-full"
          >
            <i
              class="material-icons svelte-hn7eai"
            >
              person
            </i>
          </span>
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Unknown
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          2 albums
        </h4>
      </header>
    </span>
  </div>
</section>
`;
